--- a/Challenge 2/index2.html
+++ b/Challenge 2/index2.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Challenge 2</title>
 </head>
 <body>
-    
+    <script
+         src="/Challenge 2/script2.js" defer>
+    </script>
 </body>
 </html>
